--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,6 @@ description: > # this means to ignore newlines until "show_exerpts:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
+show_excerpts: false
+
 theme: jekyll-theme-hacker
