--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,7 @@ description: > # this means to ignore newlines until "show_exerpts:"
   Google search results) and in your feed.xml site description.
 
 # theme: jekyll-theme-hacker
+
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
