--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
 title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+author: shinhwagk
+email: shanghai_sl@hotmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
-# theme: jekyll-theme-hacker
-
+theme: minima
 plugins:
  - jekyll-feed
  - jekyll-seo-tag
