--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Your awesome title
+title: GK Notes
 author: shinhwagk
 email: shanghai_sl@hotmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
