--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 title: GK Notes
 author: shinhwagk
 email: shanghai_sl@hotmail.com
-description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: 7788 5566
 
 theme: minima
 plugins:
