--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: GK Notes
 author: shinhwagk
 email: shanghai_sl@hotmail.com
 description: 7788 5566
+url: shinhwagk.com
 
 theme: minima
 plugins:	
